--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     duration: 6000
                 },
                 {
-                    text: "Selamat Ulang Tahun",
+                    text: "Selamat Ulang Tahun Ayahh...",
                     y: 150,
                     fromCurrentPosition: { y: false },
                     delay: 3000,
